k8s/edge_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polar-ingress
  #annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx #le contrôleur manageant l'objet Ingress
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
