k8s/istio_edge_dr.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: edge-service
spec:
  host: edge-service
#subsets:
trafficPolicy:
  tls:
    mode: ISTIO_MUTUAL
